# RustyPasswordGeneratorCLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md
docs/: API.md  CHANGELOG.md  QUICKSTART.md
src/: cli.rs  main.rs  utils.rs
src/analyzer/: mod.rs
src/generator/: mod.rs
